burger color was not visible issue resolved

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ justify-content: space-around;
 .Burger div{
     height: 3px;
     width: 25px;
-    background-color: white
+    background-color: white;
     margin:4px;
 }
 .Burger {
